Fix docs introSection to be responsive on mobile

--- a/uilib-docs/src/pages/sections/IntroSection.scss
+++ b/uilib-docs/src/pages/sections/IntroSection.scss
@@ -9,22 +9,26 @@
   .intro-cover {
     position: absolute;
     width: 100vw;
-  }
+    opacity: 0.7;
 
-  .intro-inner {
-    display: flex;
+    @include desktop {
+      opacity: 1;
+    }
   }
 
   .intro-content {
     position: absolute;
-    top: 20vw;
-    left: 7vw;
+    z-index: 1;
     display: flex;
     flex-direction: column;
-    z-index: 1;
-    width: 40%;
-    justify-content: center;
     align-items: flex-start;
+    top: 5vh;
+
+    @include desktop() {
+      top: 15vw;
+      left: 7vw;
+      width: 40%;
+    }
 
     > p {
       font-size: 3em;
@@ -58,9 +62,22 @@
 
     .buttons {
       margin-top: 40px;
+      align-self: center;
+      display: flex;
+      flex-direction: column;
+
+      @include desktop() {
+        align-self: flex-start;
+        flex-direction: row;
+      }
 
       > :first-child {
-        margin-right: 10px;
+        margin-bottom: 10px;
+
+        @include desktop() {
+          margin-right: 10px;
+          margin-bottom: 0;
+        }
       }
     }
   }
